--- a/src/App.css
+++ b/src/App.css
@@ -40,3 +40,6 @@
 .read-the-docs {
   color: #888;
 }
+.h1{
+  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+}
